fix spacing on project container

--- a/src/scss/projects.scss
+++ b/src/scss/projects.scss
@@ -9,7 +9,7 @@
 .project_left_outer_container {
   @include flex($direction: column);
   @include round_border();
-  height: 650px;
+  justify-content: space-between;
   box-sizing: content-box;
   max-width: clamp(330px, 100vw, 550px);
   background-color: var.$bg_aqua;
@@ -72,7 +72,7 @@
 
 .project_selector_container {
   @include flex();
-  margin: 30px auto;
+  margin: 10px auto;
 }
 
 .project_selector,
@@ -113,7 +113,7 @@
 
 @media screen and (min-width: 550px) {
   .project_left_outer_container {
-    height: 500px;
+    height: 550px;
   }
 }
 
